# OpenARM-VLA

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
REPORT/: OpenARM-VLA.Rmd  OpenARM-VLA.html  style.css
conf/: config.yaml  eval_model.yaml  generate_dataset.yaml  mamba.yaml  merge_demos.yaml  tasks.yaml  transformer.yaml
scripts/: compare_models.sh  create_dataset.sh  eval_model.sh  train_model.sh
scripts/docker/: compare_models.sh  create_dataset.sh  eval_model.sh
src/: __init__.py  collect_dataset_preview_videos.py  eval.py  generate_dataset.py  launch_env.py  merge_demos.py  train.py  utils.py  view_dataset.py
src/dataloader/: __init__.py  load.py
src/dataloader/RL_policy/: model_1999.pt
