[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openarm-vla"
version = "0.0.0"
description = "OpenArm VLA repo"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["MambaVLA*", "src*"]
exclude = ["openarm_isaac_lab*"]
