[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openarm-vla"
version = "0.0.0"
description = "OpenArm VLA repo"
requires-python = ">=3.10"
dependencies = [
  "omegaconf",
  "ftfy",
  "wandb",
  "hydra-core",
  "peft",
  "colorama",
  "h5py",
  "tqdm",
  "opencv-python",
  "einops",
  "dataloader",
  "numpy<2",
  "pillow==11.3.0",
  "packaging<24",
  "clip @ git+https://github.com/openai/CLIP.git",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["MambaVLA*", "src*"]
exclude = ["openarm_isaac_lab*"]
