[metadata]
name = openarm-vla
version = 0.0.0

description = OpenArm VLA repo
author = sai navaneet
author_email = sainavaneet76@gmail.com
github_username = sainavaneet

[options]
package_dir =
    = .
packages = find:
include_package_data = True
python_requires = >=3.10

[options.packages.find]
where = .
include =
    MambaVLA*
    src*
exclude =
    openarm_isaac_lab*
